# podlocalsync

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml
src/: podlocalsync.py
