[tool.poetry]
name = "podlocalsync"
version = "0.0.1"
description = "Manage and serve podcast RSS feeds locally"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.5.2"
cleo = "^0.8.1"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = {extras = ["pyproject"], version = "^5.2.2"}

[tool.poetry.scripts]
podlocalsync = "podlocalsync:main"

[tool.isort]
# see https://black.readthedocs.io/en/stable/the_black_code_style.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

indent = '    '
combine_as_imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
